unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__Field__c.field-meta.xml
<CustomField>
    <fullName>LH__Field__c</fullName>
    <description>Name of field to filter on.</description>
    <label>zDeprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>