unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__ImportId__c.field-meta.xml
<CustomField>
    <fullName>LH__ImportId__c</fullName>
    <externalId>true</externalId>
    <label>Import Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>