unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__JSON__c.field-meta.xml
<CustomField>
    <fullName>LH__JSON__c</fullName>
    <label>JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>