unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__Logic__c.field-meta.xml
<CustomField>
    <fullName>LH__Logic__c</fullName>
    <description>Comparison operator.</description>
    <label>Logic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>