unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__Newline_Formula__c.field-meta.xml
<CustomField>
    <fullName>LH__Newline_Formula__c</fullName>
    <formula>BR()</formula>
    <label>Newline Formula</label>
    <type>Text</type>
</CustomField>