unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__PS_Exception__c.field-meta.xml
<CustomField>
    <fullName>LH__PS_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name Not Same As FK Object</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filters2</relationshipLabel>
    <relationshipName>HSCriterias2</relationshipName>
    <type>Lookup</type>
</CustomField>