unpackaged/main/default/objects/LH__HS_Filter__c/fields/LH__XRef__c.field-meta.xml
<CustomField>
    <fullName>LH__XRef__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>