unpackaged/main/default/objects/LH__HS_Filter__c/listViews/LH__All.listView-meta.xml
<ListView>
    <fullName>LH__All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>LH__Condition__c</columns>
    <columns>LH__XRef__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>